--- a/asset/css/utility.css
+++ b/asset/css/utility.css
@@ -21,4 +21,7 @@ ul.nodots > li {
   margin-top: 20px;
   margin-bottom: 20px; }
 
+.pos-relative {
+  position: relative; }
+
 /*# sourceMappingURL=utility.css.map */
